--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -83,7 +83,7 @@
     "floating = 20.5\n",
     "string = \"How are\"\n",
     "boolean = True\n",
-    "stringl = \"myself Anuj\"\n",
+    "stringl = \"myself kashvi\"\n",
     "string2 = \"hi how are you\"\n",
     "\n",
     "print(\"Addition (Integer + Float):\", integer + floating)\n",
@@ -108,14 +108,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter your name:  anuj\n"
+      "Enter your name:  kashvi\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, anuj, how are you?\n"
+      "Hello, kashvi, how are you?\n"
      ]
     },
     {
@@ -129,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anuj, you are 24 years old.\n"
+      "kashvi, you are 24 years old.\n"
      ]
     }
    ],
