--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -55,20 +55,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Person dictionary: {'name': 'Anuj', 'age': 25, 'city': 'India'}\n",
+      "Person dictionary: {'name': 'kashvi', 'age': 20, 'city': 'India'}\n",
       "\n",
-      "Name: Anuj\n",
-      "Age: 25\n",
+      "Name: kashvi\n",
+      "Age: 20\n",
       "City: India\n",
       "\n",
-      "Dictionary after adding email: {'name': 'Anuj', 'age': 25, 'city': 'India', 'email': 'anuj@gmail.com'}\n",
+      "Dictionary after adding email: {'name': 'kashvi', 'age': 20, 'city': 'India', 'email': 'anuj@gmail.com'}\n",
       "\n",
-      "Dictionary after updating age: {'name': 'Anuj', 'age': 26, 'city': 'India', 'email': 'anuj@gmail.com'}\n",
+      "Dictionary after updating age: {'name': 'kashvi', 'age': 21, 'city': 'India', 'email': 'anuj@gmail.com'}\n",
       "\n",
       "'city' key exists in the dictionary\n",
       "\n",
       "All keys: ['name', 'age', 'city', 'email']\n",
-      "All values: ['Anuj', 26, 'India', 'anuj@gmail.com']\n"
+      "All values: ['kashvi', 21, 'India', 'kashvi@gmail.com']\n"
      ]
     }
    ],
@@ -81,14 +81,14 @@
     "# o\tCheck if a key exists in the dictionary.\n",
     "# o\tGet a list of all keys and values.\n",
     "\n",
-    "person = {\"name\": \"Anuj\", \"age\": 25, \"city\": \"India\"}\n",
+    "person = {\"name\": \"kashvi\", \"age\": 25, \"city\": \"India\"}\n",
     "print(\"Person dictionary:\", person)\n",
     "\n",
     "print(\"\\nName:\", person[\"name\"])\n",
     "print(\"Age:\", person[\"age\"])\n",
     "print(\"City:\", person[\"city\"])\n",
     "\n",
-    "person[\"email\"] = \"anuj@gmail.com\"\n",
+    "person[\"email\"] = \"kashvi@gmail.com\"\n",
     "print(\"\\nDictionary after adding email:\", person)\n",
     "\n",
     "person[\"age\"] = 26\n",
